Update build pipelines.
- Add support for monitored deployment of apps with names different than their images.

Signed-off-by: Wade Barnes <wade@neoterictech.ca>

--- a/jenkins/backup/Jenkinsfile
+++ b/jenkins/backup/Jenkinsfile
@@ -27,7 +27,8 @@ node {
 
   stage("Deploy ${config.DEPLOYMENT_ENVIRONMENT_TAGS[0]}") {
     script {
-      deploy("${config.APP_NAME}",
+      deploy("${config.IMAGE_NAME}",
+             "${config.APP_NAME}",
              "${config.PREFIX}",
              "${config.SUFFIX}",
              "${config.NAME_SPACE}",
