--- a/jenkins/deployment/test/Jenkinsfile
+++ b/jenkins/deployment/test/Jenkinsfile
@@ -2,7 +2,7 @@ def PIPELINE_NAME = "deployment/test"
 
 def LIB_NAME= "custom-lib"
 def LIB_REPO = "https://github.com/bcgov/a2a-trust-over-ip-configurations.git"
-def LIB_BRANCH = "master"
+def LIB_BRANCH = "main"
 library identifier: "${LIB_NAME}@${LIB_BRANCH}",
         retriever: modernSCM(
           [$class: 'GitSCMSource',
