--- a/openshift/templates/agent/config/prod/ledgers.yaml
+++ b/openshift/templates/agent/config/prod/ledgers.yaml
@@ -1,6 +1,10 @@
+- id: SOVRINLive
+  is_prodoction: true
+  genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis'
 - id: BCorvinTest
   is_production: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
 - id: CANdyDev
   is_production: true
   genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/dev/pool_transactions_genesis'
+  - name: GENESIS_FILE_URL
