--- a/openshift/templates/agent-rev/config/dev/ledgers.yaml
+++ b/openshift/templates/agent-rev/config/dev/ledgers.yaml
@@ -1,3 +1,6 @@
+- id: SOVRINSandbox
+  is_prodoction: true
+  genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis'
 - id: BCorvinTest
   is_production: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
