--- a/openshift/templates/agent-rev/config/prod/ledgers.yaml
+++ b/openshift/templates/agent-rev/config/prod/ledgers.yaml
@@ -1,5 +1,6 @@
 - id: SOVRINLive
   is_prodoction: true
+  is_write: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis'
 - id: BCorvinTest
   is_production: true
@@ -7,4 +8,3 @@
 - id: CANdyDev
   is_production: true
   genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/dev/pool_transactions_genesis'
-  - name: GENESIS_FILE_URL
