--- a/openshift/templates/agent-rev/config/test/ledgers.yaml
+++ b/openshift/templates/agent-rev/config/test/ledgers.yaml
@@ -1,8 +1,8 @@
 - id: SOVRINSandbox
-  is_prodoction: true
+  is_production: true
   is_write: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis'
-- id: BCorvinTest
+- id: BCovrinTest
   is_production: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
 - id: CANdyDev
