--- a/openshift/templates/backup/config/backup.conf
+++ b/openshift/templates/backup/config/backup.conf
@@ -51,6 +51,9 @@ postgres=wallet-lsbc/agent_lsbc_wallet
 postgres=wallet-prime/agent_prime_wallet
 postgres=wallet-health-gateway/agent_health_gateway_wallet
 postgres=wallet-buybc/agent_buybc_wallet
+postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
+postgres=vc-authn-wallet/vc_authn_agent_wallet
+postgres=wallet-idim/agent_idim_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
