Update issuer-api configuration
- Add support for configuring the timeout on the initial database connection.

Signed-off-by: Wade Barnes <wade@neoterictech.ca>

--- a/openshift/templates/issuer-api/issuer-api-deploy.yaml
+++ b/openshift/templates/issuer-api/issuer-api-deploy.yaml
@@ -193,6 +193,8 @@ objects:
                   value: ${DB_PORT}
                 - name: DB_NAME
                   value: ${DB_NAME}
+                - name: SERVER_SELECTION_TIMEOUT
+                  value: ${SERVER_SELECTION_TIMEOUT}
                 - name: DB_USER
                   valueFrom:
                     secretKeyRef:
@@ -335,6 +337,11 @@ parameters:
     description: Name of the deployed database (see environment variables in deployed
       database).
     value: issuer_db
+  - name: SERVER_SELECTION_TIMEOUT
+    displayName: Database Server Selection Timeout
+    description: The time in seconds to wait before timing out on the initial database connection.
+    required: false
+    value: "60"
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
