--- a/openshift/templates/issuer-api/issuer-api-deploy.yaml
+++ b/openshift/templates/issuer-api/issuer-api-deploy.yaml
@@ -174,7 +174,7 @@ objects:
                 initialDelaySeconds: 3
                 timeoutSeconds: 20
                 httpGet:
-                  path: /
+                  path: "/health"
                   port: ${{SERVICE_PORT}}
               livenessProbe:
                 failureThreshold: 5
@@ -182,7 +182,7 @@ objects:
                 initialDelaySeconds: 30
                 timeoutSeconds: 20
                 httpGet:
-                  path: /
+                  path: "/health"
                   port: ${{SERVICE_PORT}}
               env:
                 - name: PORT
