added dropdown to program
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/openshift/templates/issuer-admin/config/bcvcpilot/claim-config.json
+++ b/openshift/templates/issuer-admin/config/bcvcpilot/claim-config.json
@@ -17,12 +17,16 @@
       "requiredErrorText": "Required Field"
     },
     {
+      "type": "dropdown",
       "name": "program",
-      "type": "text",
       "title": "Program:",
-      "placeHolder": "",
       "isRequired": true,
-      "requiredErrorText": "Required Field"
+      "colCount": 0,
+      "choices": [
+        "LSBC",
+        "DIT Testing",
+        "IDIM Testing"
+      ]
     }
   ]
 }
