--- a/openshift/templates/visual-verifier/visual-verifier-build.yaml
+++ b/openshift/templates/visual-verifier/visual-verifier-build.yaml
@@ -1,5 +1,5 @@
 kind: Template
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 metadata:
   annotations:
     description: Build template for a django server.
